WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261457
AX: Fix failing WPT menu-roles test
https://bugs.webkit.org/show_bug.cgi?id=261457
Summary
AX: Fix failing WPT menu-roles test
Hunseop Jeong
Reported
2023-09-11 23:44:17 PDT
Currently, some of the WPT menu-roles tests[1] have failed. According to the ARIA spec[2], if a menuitem has a group as first parent and a menu or menubar as the second parent, it must be a menuitem role. [1]:
https://wpt.fyi/results/wai-aria/role/menu-roles.html
[2]:
https://w3c.github.io/aria/#menu
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-11 23:44:26 PDT
<
rdar://problem/115336495
>
Hunseop Jeong
Comment 2
2023-09-12 00:21:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17687
EWS
Comment 3
2023-09-13 09:45:30 PDT
Committed
267955@main
(2e6a3871e571): <
https://commits.webkit.org/267955@main
> Reviewed commits have been landed. Closing PR #17687 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug