AX: Fix failing WPT menu-roles test https://bugs.webkit.org/show_bug.cgi?id=261457 rdar://problem/115336495

Reviewed by Tyler Wilcock.

Currently, some of the WPT menu-roles tests[1] have failed. According to
the ARIA spec[2], if a menuitem has a group as first parent and a menu
or menubar as the second parent, it must be a menuitem role.

[1]: https://wpt.fyi/results/wai-aria/role/menu-roles.html
[2]: https://w3c.github.io/aria/#menu

* LayoutTests/accessibility/roles-computedRoleString.html:
* LayoutTests/platform/mac/accessibility/roles-computedRoleString-expected.txt:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::remapAriaRoleDueToParent const):

Canonical link: https://commits.webkit.org/267955@main